--- a/wp-content/themes/voiceofoc/less/homepage.less
+++ b/wp-content/themes/voiceofoc/less/homepage.less
@@ -15,9 +15,9 @@
   }
   article div.has-thumbnail {
     float: left;
-    margin: 0;
+    margin: 0 20px 10px 0;
     img {
-      margin: 0 20px 10px 0;
+      float: none;
     }
   }
 
